<resources>
    <string name="app_name">Hability</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_deleteAll">Delete all</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_scheduler">Scheduler</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="taskCategoryArray">
        <item>General</item>
        <item>Studying</item>
        <item>Reading</item>
        <item>Leisure</item>
        <item>Gym</item>
        <item>Cooking</item>
        <item>Business</item>
    </string-array>


    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add">Add</string>
    <string name="Congrats">Congratulations!</string>
    <string name="CongratsMsg">You’ve found a new trophy</string>

</resources>