<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar_icon"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_scheduler"
            android:icon="@drawable/scheduler_icon"
            android:title="@string/menu_scheduler" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/goals_icon"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/statistics_icon"
            android:title="@string/menu_statistics" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
    </group>
</menu>