<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.syncstorm.hability.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.syncstorm.hability.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_scheduler"
        android:name="com.syncstorm.hability.ui.scheduler.SchedulerFragment"
        android:label="@string/menu_scheduler"
        tools:layout="@layout/fragment_scheduler" />
    <fragment
        android:id="@+id/nav_goals"
        android:name="com.syncstorm.hability.ui.goals.GoalsFragment"
        android:label="@string/menu_goals"
        tools:layout="@layout/goals_fragment">
        <action
            android:id="@+id/action_nav_goals_to_addGoals"
            app:destination="@id/addGoals"/>
        <action
            android:id="@+id/action_nav_goals_to_updateGoal"
            app:destination="@id/updateGoal" />
        <action
            android:id="@+id/action_nav_goals_to_achievementGoal"
            app:destination="@id/achievementGoal" />
    </fragment>
    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.syncstorm.hability.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/statistics_fragment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.syncstorm.hability.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings_fragment" />
    <fragment

        android:id="@+id/nav_creationform"
        android:name="com.syncstorm.hability.ui.creationform.CreationForm"
        android:label="Create Task"
        tools:layout="@layout/creation_form_fragment" />

        android:id="@+id/addGoals"
        android:name="com.syncstorm.hability.ui.goals.AddGoals"
        android:label="Create Goal"
        tools:layout="@layout/fragment_add_goals" />
    <fragment
        android:id="@+id/updateGoal"
        android:name="com.syncstorm.hability.ui.goals.UpdateGoal"
        android:label="Update Goal"
        tools:layout="@layout/fragment_update_goal" />
    <fragment
        android:id="@+id/achievementGoal"
        android:name="com.syncstorm.hability.ui.goals.AchievementGoal"
        android:label="fragment_achievement_goal"
        tools:layout="@layout/fragment_achievement_goal" />

</navigation>